--- a/Lab-Compile/1 st Quarter Laboratory Exercises.html
+++ b/Lab-Compile/1 st Quarter Laboratory Exercises.html
@@ -9,7 +9,7 @@
 		<ul>
 			<li><a href="Lab-Compile/mod2-1_rodriguez.html">Lab Exercise #1</a></li>
 			<li><a href="Lab-Compile/mod2-2_rodriguez.html">Lab Exercise #2</a></li>
-			<li><a href="mod2-3_rodriguez_1.html">Lab Exercise #3</a></li>
+			<li><a href="Lab-Compile/mod2-3_rodriguez_1.html">Lab Exercise #3</a></li>
 			<li><a href="mod2-4_rodriguez.html">Lab Exercise #4</a></li>
 		</ul>
 		<p> Chyrsten Lorynne C. Rodriguez</p>
