--- a/Lab-Compile/mod2-1_rodriguez.html
+++ b/Lab-Compile/mod2-1_rodriguez.html
@@ -9,18 +9,7 @@
 		<link rel="icon" href="icon.png" type="image/gif">
 		
 		<style>
-		a:link, a:visited {
-		background-color: blue;
-		color: white;
-		padding: 14px 25px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		}
-
-		a:hover, a:active {
-		background-color: blue;
-		}
+		<link rel="stylesheet" href="style 1.css">
 		</style>
 	</head>
 	
