--- a/Lab-Compile/mod2-1_rodriguez.html
+++ b/Lab-Compile/mod2-1_rodriguez.html
@@ -8,13 +8,10 @@
 		<meta name="revised" content="05-09-2022">
 		<link rel="icon" href="icon.png" type="image/gif">
 		
-		<style>
-		<link rel="stylesheet" href="style 1.css">
-		</style>
 	</head>
 	
 	<body>
 		This is a webpage. I love Computer Science
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html" target="_blank">Go back to home</a>
+		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
 	</body>
 	</html>
