--- a/Lab-Compile/mod2-2_rodriguez.html
+++ b/Lab-Compile/mod2-2_rodriguez.html
@@ -2,20 +2,6 @@
 <html>
 	<head>
 		<title>My First Webpage</title>
-		<style>
-		a:link, a:visited {
-		background-color: blue;
-		color: white;
-		padding: 14px 25px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		}
-
-		a:hover, a:active {
-		background-color: blue;
-		}
-		</style>
 	</head>
 	<body>
 		<div>
@@ -35,6 +21,6 @@
 		</span>
 		
 		<p>Copyright &copy; CLRodriguez 9-Sodium</p>
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html" target="_blank">Go back to home</a>
+		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
 	</body>
 </html>
