--- a/Lab-Compile/mod2-4_rodriguez.html
+++ b/Lab-Compile/mod2-4_rodriguez.html
@@ -2,33 +2,7 @@
 <html>
 	<head>
 		<title>My First Website</title>
-		<style> 
-			th, td {
-				border: 1px solid blue;
-			}
-			th, td {
-			background-color: #ffeecc;
-			}
-			
-			caption {
-			text-align: center;
-			}
-			
-			a:link, a:visited {
-			background-color: blue;
-			color: white;
-			padding: 14px 25px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			}
-
-			a:hover, a:active {
-			background-color: blue;
-			}
-		
-			
-		</style>
+		<link rel="stylesheet" href="style1.css">
 	</head>
 	
 	<body>
@@ -66,6 +40,6 @@
 			</tr>
 			
 		</table>
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html" target="_blank">Go back to home</a>
+		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
 	</body>
 </html>
