--- a/Lab-Compile/1 st Quarter Laboratory Exercises.html
+++ b/Lab-Compile/1 st Quarter Laboratory Exercises.html
@@ -2,17 +2,15 @@
 <html>
 	<head>
 		<title>Compiled Lab Exercises</title>
+		<link rel="stylesheet" href="style main.css">
 	</head>
 	
 	<body>
 		<h1>1st Quarter Laboratory Exercises</h1>
-		<ul>
-			<li><a href="Lab-Compile/mod2-1_rodriguez.html">Lab Exercise #1</a></li>
-			<li><a href="Lab-Compile/mod2-2_rodriguez.html">Lab Exercise #2</a></li>
-			<li><a href="mod2-3_rodriguez_1.html">Lab Exercise #3</a></li>
-			<li><a href="mod2-4_rodriguez.html">Lab Exercise #4</a></li>
-		</ul>
-		<p> Chyrsten Lorynne C. Rodriguez</p>
-		<p> 9-Sodium </p>
+		<a href="file:///C:/Users/user/Downloads/Lab-Compile/mod2-1_rodriguez.html">Lab Exercise #1</a>
+		<a href="file:///C:/Users/user/Downloads/Lab-Compile/mod2-2_rodriguez.html">Lab Exercise #2</a>
+		<a href="file:///C:/Users/user/Downloads/Lab-Compile/mod2-3_rodriguez_1.html">Lab Exercise #3</a>
+		<a href="file:///C:/Users/user/Downloads/Lab-Compile/mod2-4_rodriguez.html">Lab Exercise #4</a>
+		<p> Chyrsten Lorynne C. Rodriguez, 9-Sodium </p>
 	</body>
 </html>
