--- a/Lab-Compile/mod2-1_rodriguez.html
+++ b/Lab-Compile/mod2-1_rodriguez.html
@@ -12,6 +12,6 @@
 	
 	<body>
 		This is a webpage. I love Computer Science
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
+		<br><a href="Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
 	</body>
 	</html>
