--- a/Lab-Compile/1 st Quarter Laboratory Exercises.html
+++ b/Lab-Compile/1 st Quarter Laboratory Exercises.html
@@ -7,10 +7,10 @@
 	
 	<body>
 		<h1>1st Quarter Laboratory Exercises</h1>
-		<a href="/Lab-Compile/mod2-1_rodriguez.html">Lab Exercise #1</a>
-		<a href="/Lab-Compile/mod2-2_rodriguez.html">Lab Exercise #2</a>
-		<a href="/Lab-Compile/mod2-3_rodriguez_1.html">Lab Exercise #3</a>
-		<a href="/Lab-Compile/mod2-4_rodriguez.html">Lab Exercise #4</a>
+		<a href="mod2-1_rodriguez.html">Lab Exercise #1</a>
+		<a href="mod2-2_rodriguez.html">Lab Exercise #2</a>
+		<a href="mod2-3_rodriguez_1.html">Lab Exercise #3</a>
+		<a href="mod2-4_rodriguez.html">Lab Exercise #4</a>
 		<p> Chyrsten Lorynne C. Rodriguez, 9-Sodium </p>
 	</body>
 </html>
