--- a/Lab-Compile/mod2-3_rodriguez_1.html
+++ b/Lab-Compile/mod2-3_rodriguez_1.html
@@ -6,7 +6,7 @@
 	
 	<body>
 		<h1>See my favorite anime</h1>
-		<a href="file:///C:/Users/user/Downloads/Lab-Compile/mod2-3_rodriguez_2.html">Click here!</a>
-		<br><br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
+		<a href="mod2-3_rodriguez_2.html">Click here!</a>
+		<br><br><a href="1 st Quarter Laboratory Exercises.html">Go back to home...</a>
 	</body>
 </html>
