--- a/Lab-Compile/mod2-3_rodriguez_2.html
+++ b/Lab-Compile/mod2-3_rodriguez_2.html
@@ -7,6 +7,6 @@
 		<h1>My Favorite Anime</h1>
 		<img src="https://m.media-amazon.com/images/M/MV5BNmM4YTFmMmItMGE3Yy00MmRkLTlmZGEtMzZlOTQzYjk3MzA2XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_FMjpg_UX1000_.jpg" width="500" height="700">
 		<p> My favorite anime is Howl's Moving Castle. It is all about an unconfident young woman cursed with an old body by a spiteful witch, her only chance of breaking the spell lies with a self-indulgent yet insecure young wizard and his companions in his legged, walking castle. It is a very comforting movie and I love the plot of the movie.
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
+		<br><a href="1 st Quarter Laboratory Exercises.html">Go back to home...</a>
 		</body>
 </html>
