--- a/Lab-Compile/mod2-4_rodriguez.html
+++ b/Lab-Compile/mod2-4_rodriguez.html
@@ -40,6 +40,6 @@
 			</tr>
 			
 		</table>
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
+		<br><a href="1 st Quarter Laboratory Exercises.html">Go back to home...</a>
 	</body>
 </html>
