--- a/Lab-Compile/mod2-2_rodriguez.html
+++ b/Lab-Compile/mod2-2_rodriguez.html
@@ -21,6 +21,6 @@
 		</span>
 		
 		<p>Copyright &copy; CLRodriguez 9-Sodium</p>
-		<br><a href="file:///C:/Users/user/Downloads/Lab-Compile/1%20st%20Quarter%20Laboratory%20Exercises.html">Go back to home...</a>
+		<br><a href="1 st Quarter Laboratory Exercises.html">Go back to home...</a>
 	</body>
 </html>
