--- a/New folder (5)/website.html
+++ b/New folder (5)/website.html
@@ -2,6 +2,10 @@
 <html>
 	<head> 
 		<style>
+			body {
+			background-image: url('waves.jpg');
+			} 
+			
 			#grad1 {
 			height: 65px;
 			background-image: linear-gradient(to right, rgba(247,237,226,1.000), #F54CAC3);
