--- a/FA6_Rodriguez.html
+++ b/FA6_Rodriguez.html
@@ -44,12 +44,14 @@
 
         #div1:target {
             background-color: red;
+	    color: yellow;
         }
 
         #div2:target {
             background-color: lime;
             border: 10px solid green;
             border-style: dotted;
+	    color: yellow;
         }
     </style>
 </head>
