--- a/2nd Quarter Project – Rodriguez/gallery.html
+++ b/2nd Quarter Project – Rodriguez/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title> HEAL/Home </title>
+	<title> HEAL/Gallery </title>
 	<meta charset="UTF-8">
 	<meta name="author" content="Chyrsten Lorynne C. Rodriguez">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
