--- a/2nd Quarter Project – Rodriguez/index.html
+++ b/2nd Quarter Project – Rodriguez/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<title> HEAL/Home </title>
 	<meta charset="UTF-8">
 	<meta name="author" content="Chyrsten Lorynne C. Rodriguez">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<meta name="revised" content="05-09-2022">
 	<link rel="icon" href="https://i.pinimg.com/564x/46/53/ca/4653ca02b288b8fbb57ba3624b9a9c49.jpg" type="image/gif">
-	<link rel="stylesheet" href="style home.css">	
-	
+	<link rel="stylesheet" href="css/style home.css">
 </head>
 <body>
 	
 	<div class="topnav">
-	<a href="contact.html">Contact</a>
-	<a href="author.html">Author's Corner</a>
-	<a href="gallery.html">Gallery</a>
-	<a href="characters.html">Characters</a>
+	<a href="htdocs/contact.html">Contact</a>
+	<a href="htdocs/author.html">Author's Corner</a>
+	<a href="htdocs/gallery.html">Gallery</a>
+	<a href="htdocs/characters.html">Characters</a>
 	<a class="active" href="index.html">Home</a>
 	
 	<div id="header">
